--- a/MasterDetail42-MVC/UI/Storyboard/Base.lproj/Main.storyboard
+++ b/MasterDetail42-MVC/UI/Storyboard/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9gT-m2-HpQ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -155,9 +156,8 @@
                                     <action selector="drawerViewBackButtonTapped:" destination="3gv-3D-q23" eventType="touchUpInside" id="hNh-bD-pp4"/>
                                 </connections>
                             </button>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KDq-2h-scg" userLabel="Drawer View">
-                                <rect key="frame" x="-414" y="88" width="414" height="774"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KDq-2h-scg" userLabel="Drawer View">
+                                <rect key="frame" x="-311" y="88" width="311" height="808"/>
                                 <connections>
                                     <segue destination="KSu-gh-EwK" kind="embed" id="Ze2-qX-qTu"/>
                                 </connections>
@@ -168,14 +168,18 @@
                         <constraints>
                             <constraint firstItem="qU3-12-R5E" firstAttribute="trailing" secondItem="q3C-3a-uXs" secondAttribute="trailing" id="0IJ-cU-wqn"/>
                             <constraint firstItem="qU3-12-R5E" firstAttribute="leading" secondItem="q3C-3a-uXs" secondAttribute="leading" id="0Y6-yQ-zQx"/>
-                            <constraint firstItem="z3P-f9-uOT" firstAttribute="top" secondItem="q3C-3a-uXs" secondAttribute="top" id="8LP-Tv-fS4"/>
+                            <constraint firstItem="z3P-f9-uOT" firstAttribute="top" secondItem="qU3-12-R5E" secondAttribute="top" id="8LP-Tv-fS4"/>
                             <constraint firstItem="z3P-f9-uOT" firstAttribute="bottom" secondItem="HtX-fH-iui" secondAttribute="bottom" id="FBR-sk-e54"/>
+                            <constraint firstItem="KDq-2h-scg" firstAttribute="trailing" secondItem="z3P-f9-uOT" secondAttribute="leading" id="LqG-ZT-QEq"/>
+                            <constraint firstItem="KDq-2h-scg" firstAttribute="width" secondItem="z3P-f9-uOT" secondAttribute="width" multiplier="0.75" id="UMA-WA-wSl"/>
+                            <constraint firstItem="KDq-2h-scg" firstAttribute="top" secondItem="z3P-f9-uOT" secondAttribute="top" id="W24-1N-g8H"/>
                             <constraint firstItem="qU3-12-R5E" firstAttribute="bottom" secondItem="q3C-3a-uXs" secondAttribute="bottom" id="XQ4-YR-B4t"/>
-                            <constraint firstItem="z3P-f9-uOT" firstAttribute="trailing" secondItem="q3C-3a-uXs" secondAttribute="trailing" id="XnD-Xw-M2f"/>
+                            <constraint firstItem="z3P-f9-uOT" firstAttribute="trailing" secondItem="HtX-fH-iui" secondAttribute="trailing" id="XnD-Xw-M2f"/>
                             <constraint firstItem="qU3-12-R5E" firstAttribute="top" secondItem="q3C-3a-uXs" secondAttribute="top" id="YUE-Gb-pym"/>
+                            <constraint firstItem="KDq-2h-scg" firstAttribute="height" secondItem="z3P-f9-uOT" secondAttribute="height" id="Yuo-dX-thv"/>
                             <constraint firstItem="hsC-Pk-9P8" firstAttribute="centerX" secondItem="q3C-3a-uXs" secondAttribute="centerX" id="Zgo-za-PQb"/>
                             <constraint firstItem="hsC-Pk-9P8" firstAttribute="centerY" secondItem="q3C-3a-uXs" secondAttribute="centerY" id="eDg-I2-n5U"/>
-                            <constraint firstItem="z3P-f9-uOT" firstAttribute="leading" secondItem="q3C-3a-uXs" secondAttribute="leading" id="l6M-IY-2v5"/>
+                            <constraint firstItem="z3P-f9-uOT" firstAttribute="leading" secondItem="HtX-fH-iui" secondAttribute="leading" id="l6M-IY-2v5"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Master View Controller" id="ki7-DU-ABa"/>
@@ -279,14 +283,14 @@
             <objects>
                 <viewController id="KSu-gh-EwK" customClass="NavDrawerViewController" customModule="MasterDetail42_MVC" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OD4-Yp-opA">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                        <rect key="frame" x="0.0" y="0.0" width="311" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1yk-Dt-o6x" userLabel="Logo">
-                                <rect key="frame" x="0.0" y="44" width="414" height="265"/>
+                                <rect key="frame" x="0.0" y="44" width="311" height="200"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MasterDetail42-MVC" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0Z-dT-5hs" userLabel="Title">
-                                        <rect key="frame" x="10" y="0.0" width="394" height="265"/>
+                                        <rect key="frame" x="10" y="0.0" width="291" height="200"/>
                                         <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="24"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -297,18 +301,22 @@
                                     <constraint firstItem="o0Z-dT-5hs" firstAttribute="leading" secondItem="1yk-Dt-o6x" secondAttribute="leading" constant="10" id="2yc-SI-Acs"/>
                                     <constraint firstItem="o0Z-dT-5hs" firstAttribute="trailing" secondItem="1yk-Dt-o6x" secondAttribute="trailing" constant="-10" id="4jQ-Mw-aMR"/>
                                     <constraint firstItem="o0Z-dT-5hs" firstAttribute="bottom" secondItem="1yk-Dt-o6x" secondAttribute="bottom" id="T0q-dQ-U4O"/>
+                                    <constraint firstAttribute="height" constant="200" id="WdJ-Ej-ddJ"/>
                                     <constraint firstAttribute="top" secondItem="o0Z-dT-5hs" secondAttribute="top" id="Znu-17-Jpi"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5i-jO-p1l" userLabel="SettingsBorder">
-                                <rect key="frame" x="0.0" y="309" width="414" height="0.5"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="244" width="311" height="0.5"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="Cvj-Vl-32e"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rzC-fx-yrR">
-                                <rect key="frame" x="20.5" y="309.5" width="393.5" height="61.5"/>
+                                <rect key="frame" x="15.5" y="244.5" width="295.5" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Aua-UZ-xSe"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="About">
@@ -320,20 +328,20 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pId-Xc-dit" userLabel="AboutBottomBorder">
-                                <rect key="frame" x="20.5" y="371" width="393.5" height="0.5"/>
+                                <rect key="frame" x="15.5" y="304.5" width="295.5" height="0.5"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="SGB-ad-RlT"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last visit:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohM-qw-LrQ" userLabel="Last visit:">
-                                <rect key="frame" x="20.5" y="371.5" width="393.5" height="61.5"/>
+                                <rect key="frame" x="15.5" y="305" width="295.5" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l5H-xN-tlt" userLabel="LastVisitBottomBorder">
-                                <rect key="frame" x="20.5" y="433" width="393.5" height="0.5"/>
+                                <rect key="frame" x="15.5" y="365" width="295.5" height="0.5"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="xMV-9f-RA6"/>
@@ -344,25 +352,23 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="l5H-xN-tlt" firstAttribute="trailing" secondItem="pId-Xc-dit" secondAttribute="trailing" id="0aa-fd-CXq"/>
-                            <constraint firstItem="v5i-jO-p1l" firstAttribute="bottom" secondItem="4l9-ul-hcL" secondAttribute="bottom" multiplier="0.4" id="DeQ-f6-FMB"/>
+                            <constraint firstItem="ohM-qw-LrQ" firstAttribute="height" secondItem="rzC-fx-yrR" secondAttribute="height" id="7tZ-6g-v5s"/>
+                            <constraint firstItem="v5i-jO-p1l" firstAttribute="top" secondItem="1yk-Dt-o6x" secondAttribute="bottom" id="DeQ-f6-FMB"/>
                             <constraint firstItem="1yk-Dt-o6x" firstAttribute="leading" secondItem="4l9-ul-hcL" secondAttribute="leading" id="KIC-G9-nSt"/>
                             <constraint firstItem="pId-Xc-dit" firstAttribute="width" secondItem="v5i-jO-p1l" secondAttribute="width" multiplier="0.95" id="MbV-eK-Jqe"/>
                             <constraint firstItem="ohM-qw-LrQ" firstAttribute="leading" secondItem="pId-Xc-dit" secondAttribute="leading" id="NoL-hT-YK2"/>
                             <constraint firstItem="v5i-jO-p1l" firstAttribute="leading" secondItem="4l9-ul-hcL" secondAttribute="leading" id="Ohn-1R-cTp"/>
-                            <constraint firstItem="pId-Xc-dit" firstAttribute="bottom" secondItem="4l9-ul-hcL" secondAttribute="bottom" multiplier="0.48" id="ZOU-qy-g2L"/>
-                            <constraint firstItem="1yk-Dt-o6x" firstAttribute="bottom" secondItem="v5i-jO-p1l" secondAttribute="top" id="a7d-3C-byb"/>
+                            <constraint firstItem="pId-Xc-dit" firstAttribute="top" secondItem="rzC-fx-yrR" secondAttribute="bottom" id="ZOU-qy-g2L"/>
                             <constraint firstItem="l5H-xN-tlt" firstAttribute="leading" secondItem="pId-Xc-dit" secondAttribute="leading" id="caM-Uo-dgq"/>
                             <constraint firstItem="1yk-Dt-o6x" firstAttribute="trailing" secondItem="4l9-ul-hcL" secondAttribute="trailing" id="eK8-dY-80u"/>
-                            <constraint firstItem="ohM-qw-LrQ" firstAttribute="bottom" secondItem="l5H-xN-tlt" secondAttribute="top" id="ffQ-XB-HH2"/>
                             <constraint firstItem="l5H-xN-tlt" firstAttribute="height" secondItem="pId-Xc-dit" secondAttribute="height" id="fjP-tr-9DM"/>
                             <constraint firstItem="v5i-jO-p1l" firstAttribute="trailing" secondItem="4l9-ul-hcL" secondAttribute="trailing" id="fuo-Gt-Rof"/>
                             <constraint firstItem="ohM-qw-LrQ" firstAttribute="trailing" secondItem="pId-Xc-dit" secondAttribute="trailing" id="fwi-HI-sK6"/>
                             <constraint firstItem="rzC-fx-yrR" firstAttribute="trailing" secondItem="v5i-jO-p1l" secondAttribute="trailing" id="jtP-cO-it4"/>
-                            <constraint firstItem="rzC-fx-yrR" firstAttribute="bottom" secondItem="pId-Xc-dit" secondAttribute="top" id="mhZ-WL-K88"/>
                             <constraint firstItem="rzC-fx-yrR" firstAttribute="leading" secondItem="pId-Xc-dit" secondAttribute="leading" id="oqu-M2-QwH"/>
                             <constraint firstItem="rzC-fx-yrR" firstAttribute="top" secondItem="v5i-jO-p1l" secondAttribute="bottom" id="tTh-0f-MbQ"/>
                             <constraint firstItem="pId-Xc-dit" firstAttribute="trailing" secondItem="v5i-jO-p1l" secondAttribute="trailing" id="wPn-zd-PKm"/>
-                            <constraint firstItem="l5H-xN-tlt" firstAttribute="bottom" secondItem="4l9-ul-hcL" secondAttribute="bottom" multiplier="0.56" id="xfL-Nt-6GZ"/>
+                            <constraint firstItem="l5H-xN-tlt" firstAttribute="top" secondItem="ohM-qw-LrQ" secondAttribute="bottom" id="xfL-Nt-6GZ"/>
                             <constraint firstItem="ohM-qw-LrQ" firstAttribute="top" secondItem="pId-Xc-dit" secondAttribute="bottom" id="z6M-Vf-6rN"/>
                             <constraint firstItem="1yk-Dt-o6x" firstAttribute="top" secondItem="4l9-ul-hcL" secondAttribute="top" id="zA9-Th-Vdt"/>
                         </constraints>
@@ -381,7 +387,7 @@
             <objects>
                 <viewController id="KeX-b3-Sq4" customClass="AboutViewController" customModule="MasterDetail42_MVC" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lyq-l5-GVX">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="720"/>
+                        <rect key="frame" x="0.0" y="0.0" width="311" height="754"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dyi-ES-edZ">
@@ -392,7 +398,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="A simple iOS application using the MVC (Model-View-Controller) pattern." textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="OaR-xk-nQn">
-                                <rect key="frame" x="20.5" y="72" width="373" height="576"/>
+                                <rect key="frame" x="15.5" y="75.5" width="280" height="603"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
